create installer with VPMPackageAutoInstaller

--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -20,7 +20,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  listPublishDirectory: Website
+  vpmRepository: https://vpm.nekomimi.studio/index.json
   pathToCi: ci
 
 jobs:
@@ -52,6 +52,8 @@ jobs:
             const package = JSON.parse(fs.readFileSync("./package.json"));
             const basepkg = JSON.parse(fs.readFileSync("${{env.pathToCi}}/vpm-repo/index.json"));
 
+            package.url = "https://github.com/${{ github.repository }}/releases/download/" + package.version + "/" + package.name + "-" + package.version + ".zip?";
+
             if (basepkg.packages[package.name] === undefined) basepkg.packages[package.name] = {};
             if (basepkg.packages[package.name].versions === undefined) basepkg.packages[package.name].versions = {};
             basepkg.packages[package.name].versions[package.version] = package;
@@ -64,9 +66,25 @@ jobs:
           node -e '
             const fs = require("fs");
             const package = JSON.parse(fs.readFileSync("./package.json"));
-            console.log("package_version=" + package.versions);
+            console.log("package_version=" + package.version);
             console.log("package_displayName=" + package.displayName);
           ' >> $GITHUB_ENV
+
+      - name: Create installer
+        run: >
+          mkdir ${{env.pathToCi}}/vpmPackage;
+          wget https://github.com/anatawa12/VPMPackageAutoInstaller/releases/latest/download/creator.mjs -O ${{env.pathToCi}}/vpmPackage/creator.mjs;
+          node -e '
+            const fs = require("fs");
+            const package = JSON.parse(fs.readFileSync("./package.json"));
+            const config = {};
+            config.vpmRepositories = ["${{env.vpmRepository}}"];
+            config.vpmDependencies = package.vpmDependencies;
+            if (config.vpmDependencies == undefined) config.vpmDependencies = {};
+            config.vpmDependencies[package.name] = package.version;
+            fs.writeFileSync("${{env.pathToCi}}/vpmPackage/config.json", JSON.stringify(config));
+          ';
+          node ${{env.pathToCi}}/vpmPackage/creator.mjs ${{env.pathToCi}}/vpmPackage/config.json "${{env.pathToCi}}/vpm-repo/installer/${{env.package_displayName}}-installer.unitypackage";
 
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
