package.jsonのバージョンが上がったときのみリリースするように
条件を間違えていた

やはり正しくないかもしれない

ログ出力を増やす

多分これでいい

手元のactでは動いているが…

何で?

これでいい気がする

package.jsonのバージョンが上がったときのみビルドするように

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,30 @@ env:
   packageName: "studio.nekomimi.feedreader"
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    outputs:
+      run: ${{ steps.tag.outputs.tag != steps.version.outputs.prop }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: "get latest tag"
+        id: tag
+        run: echo tag=$(git describe --tags --abbrev=0) >> $GITHUB_OUTPUT
+
+      - name: get version
+        id: version
+        uses: notiz-dev/github-action-json-property@7c8cf5cc36eb85d8d287a8086a39dac59628eb31
+        with:
+          path: "package.json"
+          prop_path: "version"
+
   build:
+    needs: [check]
+    if: ${{ needs.check.outputs.run == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
