--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "gitDependencies": {},
   "vpmDependencies": {
-    "com.vrchat.udonsharp": "1.1.7",
-    "studio.nekomimi.udonxml": "0.2.4"
+    "com.vrchat.udonsharp": "~1.1.7",
+    "studio.nekomimi.udonxml": "~0.2.4"
   },
   "license": "MIT",
   "legacyFolders": {},
