UdonXMLから自作のパーサーに変更

--- a/Runtime/studio.nekomimi.feedreader.asmdef
+++ b/Runtime/studio.nekomimi.feedreader.asmdef
@@ -6,7 +6,7 @@
         "VRC.Udon",
         "UdonSharp.Runtime",
         "VRC.Udon.Serialization.OdinSerializer",
-        "studio.nekomimi.udonxml"
+        "studio.nekomimi.parser.xml"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
