--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "gitDependencies": {},
   "vpmDependencies": {
     "com.vrchat.udonsharp": "~1.1.7",
-    "studio.nekomimi.udonxml": "~0.2.4"
+    "studio.nekomimi.parser.xml": "~0.0.1"
   },
   "license": "MIT",
   "legacyFolders": {},
