ライセンス変更: MITからBSD 1-Clause バイナリ組み込みの場合のライセンス表記を不要としたいため (VRChatのワールドデータはバイナリ扱いだろう)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "com.vrchat.udonsharp": "~1.1.7",
     "studio.nekomimi.parser.xml": "~0.1.0"
   },
-  "license": "MIT",
+  "license": "BSD 1-Clause",
   "legacyFolders": {},
   "legacyFiles": {},
   "author": {
